corrected outline table spacing (hopefully)

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,11 +127,9 @@ Formatting for the cube
     border-radius: 10px;
 
 }
-/*
 .slide.active {
   border: 1px solid rgba(0, 0, 0, 1);
 }
-*/
 
 /*
 End of the lines from the original impress-demo.css
@@ -160,8 +158,7 @@ End of the lines from the original impress-demo.css
 }
 
 #outline .lcg_lcg {
-  padding-left:15%;
-  padding-right:15%;
+  width: 350px;
 }
 
 #forbes img {
@@ -184,7 +181,7 @@ End of the lines from the original impress-demo.css
   margin-top:0%
 }
 
-#viscous_society .clip {
+#viscous_society .clip video {
   margin-left:-0.5%;
   margin-top:2%;
 }
